--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tbilinews",
   "version": "0.1.0",
-  "homepage": "http://kawaiier.github.io/tbilinews", 
+  "homepage": "http://kawaiier.github.io/tbilinews",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -17,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
